--- a/package.json
+++ b/package.json
@@ -6,22 +6,45 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "db:generate": "prisma generate",
+        "db:migrate": "prisma migrate dev",
+        "db:push": "prisma db push",
+        "db:seed": "npx tsx prisma/seed.ts",
+        "db:studio": "prisma studio",
+        "db:reset": "prisma migrate reset --force"
+    },
+    "prisma": {
+        "seed": "npx tsx prisma/seed.ts"
     },
     "dependencies": {
+        "@auth/prisma-adapter": "^2.11.1",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
+        "@prisma/adapter-pg": "^7.3.0",
+        "@prisma/client": "^7.3.0",
+        "bcryptjs": "^3.0.3",
         "framer-motion": "^11.15.0",
         "next": "^14.2.20",
+        "next-auth": "^5.0.0-beta.30",
         "next-intl": "^4.7.0",
+        "pg": "^8.17.2",
+        "prisma": "^7.3.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "zod": "^4.3.6"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/node": "^22.10.2",
+        "@types/pg": "^8.16.0",
         "@types/react": "^18.3.17",
         "@types/react-dom": "^18.3.5",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
+        "tsx": "^4.21.0",
         "typescript": "^5.7.2"
     }
 }
