--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "prisma": "^7.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "sonner": "^2.0.7",
         "zod": "^4.3.6"
     },
     "devDependencies": {
