--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@prisma/client": "^7.3.0",
         "@vercel/blob": "^2.0.1",
         "bcryptjs": "^3.0.3",
+        "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^11.15.0",
         "lucide-react": "^0.563.0",
@@ -40,6 +41,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "sonner": "^2.0.7",
+        "tailwind-merge": "^3.4.0",
         "zod": "^4.3.6"
     },
     "devDependencies": {
@@ -49,6 +51,8 @@
         "@types/react": "^18.3.17",
         "@types/react-dom": "^18.3.5",
         "autoprefixer": "^10.4.20",
+        "eslint": "^9.39.2",
+        "eslint-config-next": "^16.1.6",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
         "tsx": "^4.21.0",
