--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@prisma/adapter-pg": "^7.3.0",
         "@prisma/client": "^7.3.0",
+        "@tiptap/extension-image": "^3.19.0",
+        "@tiptap/extension-link": "^3.19.0",
+        "@tiptap/extension-placeholder": "^3.19.0",
+        "@tiptap/extension-underline": "^3.19.0",
+        "@tiptap/pm": "^3.19.0",
+        "@tiptap/react": "^3.19.0",
+        "@tiptap/starter-kit": "^3.19.0",
+        "@types/turndown": "^5.0.6",
         "@vercel/blob": "^2.0.1",
         "bcryptjs": "^3.0.3",
         "clsx": "^2.1.1",
@@ -40,8 +48,18 @@
         "prisma": "^7.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "rehype-sanitize": "^6.0.0",
+        "rehype-slug": "^6.0.0",
+        "rehype-stringify": "^10.0.1",
+        "remark": "^15.0.1",
+        "remark-gfm": "^4.0.1",
+        "remark-html": "^16.0.1",
+        "remark-parse": "^11.0.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.4.0",
+        "tiptap-markdown": "^0.9.0",
+        "turndown": "^7.2.2",
+        "unified": "^11.0.5",
         "zod": "^4.3.6"
     },
     "devDependencies": {
