feat: Enable multi-line input for hero section taglines, add a partner seeding script, and refine partner manager modal UI.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "db:seed": "npx tsx prisma/seed.ts",
         "db:seed:real": "npx tsx prisma/seed-real-content.ts",
         "db:seed:contact": "npx tsx prisma/seed-contact.ts",
+        "db:seed:partners": "npx dotenv -e .env -- npx tsx scripts/seed-partners.ts",
         "db:studio": "prisma studio",
         "db:reset": "prisma migrate reset --force"
     },
